infrastructure/staging/authelia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.staging.home.lewelly.com
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  ingressClassName: traefik
  tls:
    - secretName: authelia-staging-tls-secret
      hosts:
        - auth.staging.home.lewelly.com
  rules:
    - host: auth.staging.home.lewelly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
